--- a/index.html
+++ b/index.html
@@ -101,12 +101,8 @@
   <img src="./logo.png" alt="DaleDai Logo" class="logo" />
   
 
-  <p class="tagline" Your trusted guide to safe and easy foreign employment.</p>
+  <p class="tagline"> Your trusted guide to safe and easy foreign employment.</p>
 
-  <div class="buttons">
-    <a href="register.html" class="btn primary">Get Started</a>
-    <a href="login.html" class="btn secondary">Log In</a>
-  </div>
 
   <footer>
     Made with 💙 by <a href="https://github.com/pradipchaudhary" target="_blank">Pradip Chaudhary</a> 🇳🇵
