--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dale Dai | Your Trust Agent</title>
   <style>
     * {
@@ -30,56 +30,12 @@
       margin-bottom: 20px;
     }
 
-    h1 {
-      font-size: 2rem;
-      color: #222;
-      margin-bottom: 10px;
-    }
-
-    .highlight {
-      color: #005eff;
-    }
-
     .tagline {
-      font-size: 1rem;
+      font-size: 1.1rem;
       color: #555;
-      margin-bottom: 30px;
-      line-height: 1.5;
+      margin-bottom: 40px;
+      line-height: 1.6;
       max-width: 600px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 16px;
-      margin-bottom: 30px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 12px 24px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all 0.3s ease;
-    }
-
-    .primary {
-      background-color: #005eff;
-      color: #fff;
-    }
-
-    .primary:hover {
-      background-color: #0047cc;
-    }
-
-    .secondary {
-      background-color: #e0e0e0;
-      color: #333;
-    }
-
-    .secondary:hover {
-      background-color: #ccc;
     }
 
     footer {
@@ -99,22 +55,13 @@
 </head>
 <body>
   <img src="./logo.png" alt="DaleDai Logo" class="logo" />
-  
 
-  <p class="tagline"> Your trusted guide to safe and easy foreign employment.</p>
-
+  <p class="tagline">
+    Your trusted guide to safe and easy foreign employment.
+  </p>
 
   <footer>
     Made with 💙 by <a href="https://github.com/pradipchaudhary" target="_blank">Pradip Chaudhary</a> 🇳🇵
   </footer>
-
-  <script>
-    // Optional: simple log for navigation
-    document.querySelectorAll('.btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        console.log(`Navigating to ${btn.getAttribute('href')}`);
-      });
-    });
-  </script>
 </body>
 </html>
