--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dale Dai | Your Trust Agent</title>
+  <title>Dale Dai | Your Trusted Agent</title>
   <style>
     * {
       margin: 0;
@@ -13,14 +13,14 @@
     }
 
     body {
-      background: #f5f9ff;
+      background: #ffffff;
       color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
     }
 
@@ -31,14 +31,39 @@
     }
 
     .tagline {
-      font-size: 1.1rem;
-      color: #555;
-      margin-bottom: 40px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #005eff;
+      margin-bottom: 10px;
+    }
+
+    .intro {
+      font-size: 1rem;
+      color: #444;
+      max-width: 700px;
+      margin-bottom: 30px;
       line-height: 1.6;
-      max-width: 600px;
+    }
+
+    .btn-start {
+      background-color: #005eff;
+      color: #fff;
+      padding: 14px 32px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn-start:hover {
+      background-color: #0047cc;
     }
 
     footer {
+      margin-top: 40px;
       font-size: 0.9rem;
       color: #777;
     }
@@ -56,12 +81,17 @@
 <body>
   <img src="./logo.png" alt="DaleDai Logo" class="logo" />
 
-  <p class="tagline">
-    Your trusted guide to safe and easy foreign employment.
+  <p class="tagline">Your Trusted Agent</p>
+
+  <p class="intro">
+    Dale Dai is a digital platform built to guide and protect Nepali citizens seeking foreign employment. 
+    It helps users confidently navigate the complex journey of working abroad.
   </p>
 
+  <a href="register.html" class="btn-start">Get Started</a>
+
   <footer>
-    Made with 💙 by <a href="https://github.com/pradipchaudhary" target="_blank">Pradip Chaudhary</a> 🇳🇵
+    <p>Made with 💙 by <a href="https://github.com/pradipchaudhary" target="_blank">Pradip Chaudhary</a> 🇳🇵</p>
   </footer>
 </body>
 </html>
