--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     body {
       background: #ffffff;
-      color: #333;
+      color: #000000;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -27,31 +27,31 @@
     .logo {
       width: 500px;
       max-width: 90%;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
     }
 
     .tagline {
       font-size: 1.2rem;
       font-weight: 600;
-      color: #005eff;
+      color: #000000;
       margin-bottom: 10px;
     }
 
     .intro {
       font-size: 1rem;
-      color: #444;
+      color: #222222;
       max-width: 700px;
-      margin-bottom: 30px;
+      margin-bottom: 32px;
       line-height: 1.6;
     }
 
     .btn-start {
-      background-color: #005eff;
-      color: #fff;
+      background-color: #000000;
+      color: #ffffff;
       padding: 14px 32px;
       font-size: 1rem;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
       text-decoration: none;
       font-weight: bold;
@@ -59,17 +59,17 @@
     }
 
     .btn-start:hover {
-      background-color: #0047cc;
+      background-color: #333333;
     }
 
     footer {
       margin-top: 40px;
       font-size: 0.9rem;
-      color: #777;
+      color: #555555;
     }
 
     footer a {
-      color: #005eff;
+      color: #000000;
       text-decoration: none;
     }
 
